[project]
name = "pytorcher"
version = "0.1.0"
description = "PyTorcher"
authors = [
    { name = "adkevin3307", email = "adkevin3307@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
